# quarke

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
model/: wall.mtl
src/: CMakeLists.txt  main.cc  phong_stage.cc  stage.cc
src/game/: camera.cc  camera.h  fps_input_controller.cc  fps_input_controller.h  game.cc  game.h  input_controller.h  scene.cc  scene.h
src/geo/: linked_mesh_collection.cc  linked_mesh_collection.h  material.h  mesh.cc  mesh.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/mat/: material.h  solid_material.cc  solid_material.h  textured_material.cc  textured_material.h
src/pipe/: ambient_stage.cc  ambient_stage.h  blend_stage.cc  blend_stage.h  blit_stage.cc  blit_stage.h  fragment_stage.cc  fragment_stage.h  gaussian_stage.cc  gaussian_stage.h  geometry_stage.cc  geometry_stage.h  omni_shadow_stage.cc  omni_shadow_stage.h  overlay_stage.cc  overlay_stage.h  phong_stage.cc  phong_stage.h  ssao_stage.cc  ssao_stage.h  stage.cc  stage.h
src/util/: shader.h  toytga.cc  toytga.h
tex/: ad.tga  pepper-raw.tga  pepper-rle.tga
